# gazebo_geodetic_plugins

./: CMakeLists.txt  DISTRIBUTION  LICENSE  README  package.xml
include/gazebo_geodetic_plugins/: geodetic_grid.h  vehicle_position_widget.h
launch/: gazebo_geodetic_plugins_demo.launch
src/: geodetic_grid.cc  vehicle_position_widget.cc
statick_config/rsc/: config.yaml  exceptions.yaml
worlds/: gazebo_geodetic_plugins_demo.world
