<?xml version="1.0"?>
<package format="2">
  <name>gazebo_geodetic_plugins</name>
  <version>0.0.0</version>
  <description>Provides plugins related to geodetic information in Gazebo.</description>

  <author email="duy.q.nguyen12.civ@us.navy.mil">Duy Nguyen</author>
  <maintainer email="alexander.l.xydes.civ@us.navy.mil">Alexander Xydes</maintainer>
  <maintainer email="thomas.a.denewiler.civ@us.navy.mil">Thomas Denewiler</maintainer>

  <license>CC0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo</build_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>uuv_gazebo_plugins</depend>
  <depend>uuv_world_ros_plugins_msgs</depend>

  <exec_depend>dave_demo_launch</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
